modulos/extras/repaso1/pod-db_troubleshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-troubleshooter
spec:
  containers:
  - name: psql-client
    image: postgres:15-alpine
    command: ["/bin/sh", "-c", "sleep 3600"]
  restartPolicy: Never
