modulos/extras/repaso1/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formatec-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Regla para el Frontend (SIN rewrite)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: { number: 80 }
      # Regla para el Backend (requiere el rewrite)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: { number: 3000 }
